{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 85,
  "lineage": "6859bc3d-e543-68aa-8ca2-fdc13d16efb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:internet-gateway/igw-027d0813924a98eb4",
            "id": "igw-027d0813924a98eb4",
            "owner_id": "959711192947",
            "tags": {
              "Name": "dum307 VPC GW"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "dum307 VPC GW",
              "Owner": "Dmitry Urazalin",
              "Project": "TMS"
            },
            "vpc_id": "vpc-0f6b199d6d2ab15e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:route-table/rtb-07ec16d8db8a28584",
            "id": "rtb-07ec16d8db8a28584",
            "owner_id": "959711192947",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027d0813924a98eb4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dum307 Internet GW Route Table"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "dum307 Internet GW Route Table",
              "Owner": "Dmitry Urazalin",
              "Project": "TMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6b199d6d2ab15e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e404ae6582a6718",
            "route_table_id": "rtb-07ec16d8db8a28584",
            "subnet_id": "subnet-0878d0e5eb60623de"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f27e503cec44e5e",
            "route_table_id": "rtb-07ec16d8db8a28584",
            "subnet_id": "subnet-0766d3d28d8be002d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040fdfdbe08b0cda2",
            "route_table_id": "rtb-07ec16d8db8a28584",
            "subnet_id": "subnet-08bd2a8535f322ff0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:security-group/sg-097a5ba70c5312e64",
            "description": "allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097a5ba70c5312e64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "959711192947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dum307 public ssh"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "dum307 public ssh",
              "Owner": "Dmitry Urazalin",
              "Project": "TMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6b199d6d2ab15e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-0878d0e5eb60623de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0878d0e5eb60623de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307 Public Subnet 1"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "dum307 Public Subnet 1",
              "Owner": "Dmitry Urazalin",
              "Project": "TMS"
            },
            "vpc_id": "vpc-0f6b199d6d2ab15e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-0766d3d28d8be002d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0766d3d28d8be002d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307 Public Subnet 2"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "dum307 Public Subnet 2",
              "Owner": "Dmitry Urazalin",
              "Project": "TMS"
            },
            "vpc_id": "vpc-0f6b199d6d2ab15e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-08bd2a8535f322ff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bd2a8535f322ff0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307 Public Subnet 3"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "dum307 Public Subnet 3",
              "Owner": "Dmitry Urazalin",
              "Project": "TMS"
            },
            "vpc_id": "vpc-0f6b199d6d2ab15e1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:vpc/vpc-0f6b199d6d2ab15e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b1d0757cb7c41dce",
            "default_route_table_id": "rtb-0d465ea7c05de412d",
            "default_security_group_id": "sg-0344763609df3224e",
            "dhcp_options_id": "dopt-00f3a28e9b656dcad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6b199d6d2ab15e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d465ea7c05de412d",
            "owner_id": "959711192947",
            "tags": {
              "Name": "dum307_vpc"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "dum307_vpc",
              "Owner": "Dmitry Urazalin",
              "Project": "TMS"
            }
          }
        }
      ]
    }
  ]
}